<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@drawable/request_permission_bg"
        android:paddingBottom="20dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_dialog_title"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/request_permission_title"
            android:textSize="21sp"
            android:textColor="@color/bg_color"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tv_dialog_desc"
            android:layout_width="match_parent"
            android:textSize="17sp"
            android:text="@string/dialog_congrats_desc"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="60dp">

        <TextView
            android:id="@+id/tv_dialog_no"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/dialog_no"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/request_permission_cancel"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/tv_dialog_yes"
            android:layout_width="0dp"
            android:text="@string/dialog_yes"
            android:layout_weight="1"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@drawable/request_permission_comfire"
            android:layout_height="match_parent"/>

    </LinearLayout>
</LinearLayout>